Make data philosophical right
Because get with body is not supported by some libs I inserted dataGP
